# studio-offline

./: .gitignore  readme.md
client/: CMakeLists.txt  studio_offline.sln
client/WebViewWho/: CMakeLists.txt  WebViewWho.vcxproj  dllmain.cpp
client/studio_offline/: CMakeLists.txt  dllmain.cpp  studio_offline.vcxproj
client/studio_offline/chris_stuff/: patterns.hpp
server/: index.js  package-lock.json  package.json
server/routes/: ClientSettings.js  OAuth.js
server/static/ClientSettings/: PCStudioApp.json
server/static/Economy/: details.json
server/static/GameTemplates/: content.json
server/static/OAuth/: authorize.html  openid.json  token.json  userinfo.json
server/static/PlaceOpen/: openplace.json
server/static/UniversalAppConfig/: behavior-content.json
server/static/Users/: authenticated.json
server/static/assets/: 125750702  180426354  180435571  180435792  180436148  182436842  182491037  182491248  182491368  2506281703  507765000  507765644  507766388  507766666  507766951  507767714  507767968  507768375  507770239  507770453  507770677  507770818  507772104  507776043  507777451  507777826  507784897  507785072  522635514  522638767  6196665106  6372755229  6412503613  6444320592  6444884785  7430070991  7430070993  7430070997  7430071005  7430071013  (+15 more)
server/static/thumbnails/: games.json
